Fixed inaccessible video toggle btn due to z-index

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -14,6 +14,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 1;
 }
 
 .header-content-inner {
