--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -25,6 +25,7 @@
     bottom: $grid-gutter-width-base / 2;
     position: absolute;
     right: $grid-gutter-width-base / 2;
+    z-index: 2;
   }
 }
 
